--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -970,7 +970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -982,7 +982,53 @@
    },
    "outputs": [],
    "source": [
-    "#si-exercise"
+    "#si-exercise\n",
+    "\n",
+    "import requests\n",
+    "import spacy\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "from collections import Counter\n",
+    "\n",
+    "# Loading the English language model for spaCy\n",
+    "nlp = spacy.load(\"en_core_web_sm\")\n",
+    "\n",
+    "# Downloading and loading the text\n",
+    "url = \"https://github.com/dustywhite7/Econ8320/raw/refs/heads/master/AssignmentData/prideAndPrejudiceChapters.txt\"\n",
+    "response = requests.get(url)\n",
+    "text = response.text\n",
+    "\n",
+    "# Processing the text with spaCy\n",
+    "doc = nlp(text)\n",
+    "\n",
+    "# 1. Counting the number of sentences\n",
+    "sentences = len(list(doc.sents))\n",
+    "\n",
+    "# 2. Extracting proper nouns (names)\n",
+    "names = list(set(ent.text.strip() for ent in doc.ents if ent.label_ == \"PERSON\"))\n",
+    "\n",
+    "# 3. Counting adjectives (lowercase only)\n",
+    "adjectives = [token.text.lower() for token in doc if token.pos_ == \"ADJ\"]\n",
+    "adjective_counts = Counter(adjectives)\n",
+    "top_adjectives = adjective_counts.most_common(20)\n",
+    "adjectives_df = pd.DataFrame(top_adjectives, columns=[\"Adjective\", \"Count\"])\n",
+    "\n",
+    "# 4. Createing a bar chart of top 20 adjectives\n",
+    "plt.figure(figsize=(12, 6))\n",
+    "plt.bar(adjectives_df[\"Adjective\"], adjectives_df[\"Count\"])\n",
+    "plt.title(\"Top 20 Adjectives in Pride and Prejudice Chapters 44-45\")\n",
+    "plt.xlabel(\"Adjective\")\n",
+    "plt.ylabel(\"Count\")\n",
+    "plt.xticks(rotation=45, ha=\"right\")\n",
+    "plt.tight_layout()\n",
+    "fig = plt.gcf()\n",
+    "plt.close()\n",
+    "\n",
+    "# Displaying the variables (for verification)\n",
+    "print(f\"Number of sentences: {sentences}\")\n",
+    "print(f\"\\nProper nouns (names): {names}\")\n",
+    "print(\"\\nTop 20 adjectives:\")\n",
+    "print(adjectives_df)"
    ]
   }
  ],
