--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -987,7 +987,6 @@
     "import requests\n",
     "import spacy\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
     "from collections import Counter\n",
     "\n",
     "# Loading the English language model for spaCy\n",
@@ -1013,22 +1012,13 @@
     "top_adjectives = adjective_counts.most_common(20)\n",
     "adjectives_df = pd.DataFrame(top_adjectives, columns=[\"Adjective\", \"Count\"])\n",
     "\n",
-    "# 4. Createing a bar chart of top 20 adjectives\n",
-    "plt.figure(figsize=(12, 6))\n",
-    "plt.bar(adjectives_df[\"Adjective\"], adjectives_df[\"Count\"])\n",
-    "plt.title(\"Top 20 Adjectives in Pride and Prejudice Chapters 44-45\")\n",
-    "plt.xlabel(\"Adjective\")\n",
-    "plt.ylabel(\"Count\")\n",
-    "plt.xticks(rotation=45, ha=\"right\")\n",
-    "plt.tight_layout()\n",
-    "fig = plt.gcf()\n",
-    "plt.close()\n",
     "\n",
-    "# Displaying the variables (for verification)\n",
+    "\n",
+    "# Displaying the variables \n",
     "print(f\"Number of sentences: {sentences}\")\n",
     "print(f\"\\nProper nouns (names): {names}\")\n",
     "print(\"\\nTop 20 adjectives:\")\n",
-    "print(adjectives_df)"
+    "print(adjectives_df)\n"
    ]
   }
  ],
