--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -992,7 +992,7 @@
     "# Loading the English language model for spaCy\n",
     "nlp = spacy.load(\"en_core_web_sm\")\n",
     "\n",
-    "# Downloading and loading the text\n",
+    "# Downloading and load the text\n",
     "url = \"https://github.com/dustywhite7/Econ8320/raw/refs/heads/master/AssignmentData/prideAndPrejudiceChapters.txt\"\n",
     "response = requests.get(url)\n",
     "text = response.text\n",
@@ -1007,18 +1007,16 @@
     "names = list(set(ent.text.strip() for ent in doc.ents if ent.label_ == \"PERSON\"))\n",
     "\n",
     "# 3. Counting adjectives (lowercase only)\n",
-    "adjectives = [token.text.lower() for token in doc if token.pos_ == \"ADJ\"]\n",
-    "adjective_counts = Counter(adjectives)\n",
+    "adjective_list = [token.text.lower() for token in doc if token.pos_ == \"ADJ\"]\n",
+    "adjective_counts = Counter(adjective_list)\n",
     "top_adjectives = adjective_counts.most_common(20)\n",
-    "adjectives_df = pd.DataFrame(top_adjectives, columns=[\"Adjective\", \"Count\"])\n",
+    "adjectives = pd.DataFrame(top_adjectives, columns=[\"Adjective\", \"Count\"])\n",
     "\n",
-    "\n",
-    "\n",
-    "# Displaying the variables \n",
+    "# Printing for verification\n",
     "print(f\"Number of sentences: {sentences}\")\n",
     "print(f\"\\nProper nouns (names): {names}\")\n",
     "print(\"\\nTop 20 adjectives:\")\n",
-    "print(adjectives_df)\n"
+    "print(adjectives)\n"
    ]
   }
  ],
