--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -987,6 +987,7 @@
     "import requests\n",
     "import spacy\n",
     "import pandas as pd\n",
+    "import plotly.graph_objects as go\n",
     "from collections import Counter\n",
     "\n",
     "# Loading the English language model for spaCy\n",
@@ -1012,7 +1013,18 @@
     "top_adjectives = adjective_counts.most_common(20)\n",
     "adjectives = pd.DataFrame(top_adjectives, columns=[\"Adjective\", \"Count\"])\n",
     "\n",
-    "# Printing for verification\n",
+    "# 4. Creating Plotly bar chart\n",
+    "fig = go.Figure(data=[go.Bar(\n",
+    "    x=adjectives[\"Adjective\"],\n",
+    "    y=adjectives[\"Count\"]\n",
+    ")])\n",
+    "fig.update_layout(\n",
+    "    title=\"Top 20 Adjectives in Pride and Prejudice Chapters 44–45\",\n",
+    "    xaxis_title=\"Adjective\",\n",
+    "    yaxis_title=\"Count\"\n",
+    ")\n",
+    "\n",
+    "# Displaying values for manual verification\n",
     "print(f\"Number of sentences: {sentences}\")\n",
     "print(f\"\\nProper nouns (names): {names}\")\n",
     "print(\"\\nTop 20 adjectives:\")\n",
